Customize theme to match business

--- a/scss/theme/_elements.scss
+++ b/scss/theme/_elements.scss
@@ -38,6 +38,9 @@ h6 {
 h1, h2, h3, h4, h5, h6 {
 	line-height: 1.5em;
 }
+.white {
+	color: white;
+}
 .typography {
 	h1, h2, h3, h4, h5, h6 {
 		color: $text-color;
